Wed Aug  8 02:48:04 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/addr2line/Makefile (TOP): Use .CURDIR.
	* current-trunk/ar/Makefile: Likewise.
	* current-trunk/brandelf/Makefile: Likewise.
	* current-trunk/cxxfilt/Makefile: Likewise.
	* current-trunk/elfcopy/Makefile: Likewise.
	* current-trunk/elfdump/Makefile: Likewise.
	* current-trunk/findtextrel/Makefile: Likewise.
	* current-trunk/nm/Makefile: Likewise.
	* current-trunk/readelf/Makefile: Likewise.
	* current-trunk/size/Makefile: Likewise.
	* current-trunk/strings/Makefile: Likewise.

Wed Aug  8 02:37:28 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Add upstream-trunk r2539 copy.

Wed Aug  8 02:30:42 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* . (upstream-trunk): Add SF elftoolchain trunk VCS link.
	* ChangeLog, README, Makefile.in: Add.
